# pm-cookie-cutter

./: README.md  pmcc.py
project_name/: README.md  pyproject.toml
project_name/src/project_name/resources/: ignore.txt
