[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "<name>"
version = "0.0.1"
authors = [
  { name="<author.name>", email="<author.email>" },
]
description = "<description>"
readme = "README.md"
requires-python = "<requires_python>"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "<homepage>"
"Bug Tracker" = "<issues>"
